--- a/src/app/dashboard/stat-filters/stat-filters.component.html
+++ b/src/app/dashboard/stat-filters/stat-filters.component.html
@@ -1,1 +1,6 @@
-<p>stat-filters works!</p>
+<div class="card">
+  <div class="card-content">
+    <input type="text" [(ngModel)]="test"/>
+    <input type="text" [(ngModel)]="test"/>
+  </div>
+</div>
