--- a/src/app/dashboard/video-dashboard/video-dashboard.component.html
+++ b/src/app/dashboard/video-dashboard/video-dashboard.component.html
@@ -1,3 +1,3 @@
-<app-video-list [videodata]="data" (selected)="updatetitle($event)"></app-video-list>
+<app-video-list [videodata]="data | async" (selected)="updatetitle($event)"></app-video-list>
 <app-video-player [title]="titleselected"></app-video-player>
 <app-stat-filters></app-stat-filters>
